navigation dark mode commented, phone size styling fix

--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -990,6 +990,9 @@ body {
   @media only screen and (min-width: 112.5em) {
     .section-projects {
       padding: 0; } }
+  @media only screen and (max-width: 37.5em) {
+    .section-projects {
+      padding: 0; } }
 
 .section-contact {
   padding: 7rem 0;
