--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -21,6 +21,11 @@
   @include respond(big-desktop) {
     padding: 0;
   }
+
+  @include respond(phone) {
+    padding: 0;
+  }
+  
   /* @include respond(tab-land) {
     padding: 3rem 0;
     display: block;
